Modified jta with docbookrx

--- a/src/asciidoc/project/jta/examples.adoc
+++ b/src/asciidoc/project/jta/examples.adoc
@@ -1,122 +1,19 @@
-=== Examples
+= Examples
 
-==== JDBC example
+== JDBC example
 
 This simplified example assumes that you are using the transactional JDBC driver provided with \{parentProduct}.
 For details about how to configure and use this driver see the previous Chapter.
 // Previous Chpater link?
 
 ====
-[source,Java]
+[source,java]
 ----
-public class JDBCTest {
-    public static void main (String[] args) {
-
-        Connection conn = null;
-        Connection conn2 = null;
-        // non-tx statement
-        Statement stmt = null;
-        // will be a tx-statement
-        Statement stmtx = null;
-        Properties dbProperties = new Properties();
-
-        try {
-            System.out.println("\nCreating connection to database: "+url);
-
-            /*
-             * Create conn and conn2 so that they are bound to the JBossTS
-             * transactional JDBC driver. The details of how to do this will
-             * depend on your environment, the database you wish to use and
-             * whether or not you want to use the Direct or JNDI approach. See
-             * the appropriate chapter in the JTA Programmers Guide.
-             */
-
-            stmt = conn.createStatement();  // non-tx statement
-
-            try {
-                stmt.executeUpdate("DROP TABLE test_table");
-                stmt.executeUpdate("DROP TABLE test_table2");
-            } catch (Exception e) {
-                // assume not in database.
-            }
-
-            try {
-                stmt.executeUpdate("CREATE TABLE test_table (a INTEGER,b INTEGER)");
-                stmt.executeUpdate("CREATE TABLE test_table2 (a INTEGER,b INTEGER)");
-            } catch (Exception e) {
-            }
-
-            try {
-                System.out.println("Starting top-level transaction.");
-
-                com.arjuna.ats.jta.UserTransaction.userTransaction().begin();
-
-                stmtx = conn.createStatement(); // will be a tx-statement
-
-                System.out.println("\nAdding entries to table 1.");
-
-                stmtx.executeUpdate("INSERT INTO test_table (a, b) VALUES (1,2)");
-
-                ResultSet res1 = null;
-
-                System.out.println("\nInspecting table 1.");
-
-                res1 = stmtx.executeQuery("SELECT * FROM test_table");
-                while (res1.next()) {
-                    System.out.println("Column 1: "+res1.getInt(1));
-                    System.out.println("Column 2: "+res1.getInt(2));
-                }
-
-                System.out.println("\nAdding entries to table 2.");
-
-                stmtx.executeUpdate("INSERT INTO test_table2 (a, b) VALUES (3,4)");
-                res1 = stmtx.executeQuery("SELECT * FROM test_table2");
-                System.out.println("\nInspecting table 2.");
-
-                while (res1.next()) {
-                    System.out.println("Column 1: "+res1.getInt(1));
-                    System.out.println("Column 2: "+res1.getInt(2));
-                }
-                System.out.print("\nNow attempting to rollback changes.");
-                com.arjuna.ats.jta.UserTransaction.userTransaction().rollback();
-
-                com.arjuna.ats.jta.UserTransaction.userTransaction().begin();
-                stmtx = conn.createStatement();
-                ResultSet res2 = null;
-
-                System.out.println("\nNow checking state of table 1.");
-
-                res2 = stmtx.executeQuery("SELECT * FROM test_table");
-                while (res2.next()) {
-                    System.out.println("Column 1: "+res2.getInt(1));
-                    System.out.println("Column 2: "+res2.getInt(2));
-                }
-
-                System.out.println("\nNow checking state of table 2.");
-
-                stmtx = conn.createStatement();
-                res2 = stmtx.executeQuery("SELECT * FROM test_table2");
-                while (res2.next()) {
-                    System.out.println("Column 1: "+res2.getInt(1));
-                    System.out.println("Column 2: "+res2.getInt(2));
-                }
-
-                com.arjuna.ats.jta.UserTransaction.userTransaction().commit(true);
-            } catch (Exception ex) {
-                ex.printStackTrace();
-                System.exit(0);
-            }
-        } catch (Exception sysEx) {
-            sysEx.printStackTrace();
-            System.exit(0);
-        }
-    }
-}
-
+include::extras/jdbc_example.java[]
 ----
 ====
 
-==== Failure recovery example with BasicXARecovery
+== Failure recovery example with BasicXARecovery
 
 This class implements the `XAResourceRecovery` interface for `XAResources`.
 The parameter supplied in `setParameters` can contain arbitrary information necessary to initialize the class once created.
@@ -143,154 +40,9 @@ Some error-handling code is missing from this example, to make it more readable.
 
 .Failure recovery example with BasicXARecovery
 ====
-[source,Java]
+[source,java]
 ----
-/*
- * Some XAResourceRecovery implementations will do their startup work here,
- * and then do little or nothing in setDetails. Since this one needs to know
- * dynamic class name, the constructor does nothing.
- */
-
-public BasicXARecovery () throws SQLException {
-    numberOfConnections = 1;
-    connectionIndex = 0;
-    props = null;
-}
-
-/**
- * The recovery module will have chopped off this class name already. The
- * parameter should specify a property file from which the url, user name,
- * password, etc. can be read.
- *
- * @message com.arjuna.ats.internal.jdbc.recovery.initexp An exception
- *          occurred during initialisation.
- */
-
-public boolean initialise (String parameter) throws SQLException {
-    if (parameter == null)
-        return true;
-
-    int breakPosition = parameter.indexOf(BREAKCHARACTER);
-    String fileName = parameter;
-
-    if (breakPosition != -1) {
-        fileName = parameter.substring(0, breakPosition - 1);
-
-        try {
-            numberOfConnections = Integer.parseInt(parameter.substring(breakPosition + 1));
-        } catch (NumberFormatException e) {
-            return false;
-        }
-    }
-
-    try {
-        String uri = com.arjuna.common.util.FileLocator.locateFile(fileName);
-        jdbcPropertyManager.propertyManager.load(XMLFilePlugin.class.getName(), uri);
-
-        props = jdbcPropertyManager.propertyManager.getProperties();
-    } catch (Exception e) {
-        return false;
-    }
-
-    return true;
-}
-
-/**
- * @message com.arjuna.ats.internal.jdbc.recovery.xarec {0} could not find
- *          information for connection!
- */
-
-public synchronized XAResource getXAResource () throws SQLException {
-    JDBC2RecoveryConnection conn = null;
-
-    if (hasMoreResources()) {
-        connectionIndex++;
-
-        conn = getStandardConnection();
-
-        if (conn == null) conn = getJNDIConnection();
-    }
-
-    return conn.recoveryConnection().getConnection().getXAResource();
-}
-
-public synchronized boolean hasMoreResources () {
-    if (connectionIndex == numberOfConnections)
-        return false;
-    else
-        return true;
-}
-
-private final JDBC2RecoveryConnection getStandardConnection () throws SQLException {
-    String number = new String("" + connectionIndex);
-    String url = new String(dbTag + number + urlTag);
-    String password = new String(dbTag + number + passwordTag);
-    String user = new String(dbTag + number + userTag);
-    String dynamicClass = new String(dbTag + number + dynamicClassTag);
-
-    Properties dbProperties = new Properties();
-
-    String theUser = props.getProperty(user);
-    String thePassword = props.getProperty(password);
-
-    if (theUser != null) {
-        dbProperties.put(TransactionalDriver.userName, theUser);
-        dbProperties.put(TransactionalDriver.password, thePassword);
-
-        String dc = props.getProperty(dynamicClass);
-
-        if (dc != null)
-            dbProperties.put(TransactionalDriver.dynamicClass, dc);
-
-        return new JDBC2RecoveryConnection(url, dbProperties);
-    } else
-        return null;
-}
-
-private final JDBC2RecoveryConnection getJNDIConnection () throws SQLException {
-    String number = new String("" + connectionIndex);
-    String url = new String(dbTag + jndiTag + number + urlTag);
-    String password = new String(dbTag + jndiTag + number + passwordTag);
-    String user = new String(dbTag + jndiTag + number + userTag);
-
-    Properties dbProperties = new Properties();
-
-    String theUser = props.getProperty(user);
-    String thePassword = props.getProperty(password);
-
-    if (theUser != null) {
-        dbProperties.put(TransactionalDriver.userName, theUser);
-        dbProperties.put(TransactionalDriver.password, thePassword);
-
-        return new JDBC2RecoveryConnection(url, dbProperties);
-    } else
-        return null;
-}
-
-private int numberOfConnections;
-private int connectionIndex;
-private Properties props;
-private static final String dbTag = "DB_";
-private static final String urlTag = "_DatabaseURL";
-private static final String passwordTag = "_DatabasePassword";
-private static final String userTag = "_DatabaseUser";
-private static final String dynamicClassTag = "_DatabaseDynamicClass";
-private static final String jndiTag = "JNDI_";
-
-/*
- * Example:
- *
- * DB2_DatabaseURL=jdbc\:arjuna\:sequelink\://qa02\:20001
- * DB2_DatabaseUser=tester2 DB2_DatabasePassword=tester
- * DB2_DatabaseDynamicClass=com.arjuna.ats.internal.jdbc.drivers.sequelink_5_1
- *
- * DB_JNDI_DatabaseURL=jdbc\:arjuna\:jndi DB_JNDI_DatabaseUser=tester1
- * DB_JNDI_DatabasePassword=tester DB_JNDI_DatabaseName=empay
- * DB_JNDI_Host=qa02 DB_JNDI_Port=20000
- */
-// delimiter for parameters
-private static final char BREAKCHARACTER = ';';
-
+include::extras/failure_recovery_example.java[]
 ----
 
 You can use the class `com.arjuna.ats.internal.jdbc.recovery.JDBC2RecoveryConnection` to create a new connection to the database using the same parameters used to create the initial connection.
