--- a/src/asciidoc/project/jta/starting_and_stopping_transaction_manager.adoc
+++ b/src/asciidoc/project/jta/starting_and_stopping_transaction_manager.adoc
@@ -1,4 +1,4 @@
-=== Starting and Stopping the Transaction Manager
+= Starting and Stopping the Transaction Manager
 
 By default, the transaction manager starts up in an active state such that new transactions can be created immediately.
 If you wish to have more control over this it is possible to set the `CoordinatorEnvironmentBean.startDisabled` configuration option to `YES` and in which case no transactions can be created until the transaction manager is enabled via a call to method `TxControl.enable`).
@@ -16,5 +16,5 @@ This method takes a Boolean parameter: if `true` then the method will wait for t
 
 [NOTE]
 ====
-if you intend to restart the recovery manager later after having terminated, it then you MUST use the `TransactionReapear.terminate` method with asynchronous behavior set to `false` .
+if you intend to restart the recovery manager later after having terminated, it then you MUST use the `TransactionReapear.terminate` method with asynchronous behavior set to `false`.
 ====
