--- a/src/asciidoc/project/jta/administration_introduction.adoc
+++ b/src/asciidoc/project/jta/administration_introduction.adoc
@@ -1,11 +1,11 @@
-=== Introduction
+= Introduction
 
-Apart from ensuring that the run-time system is executing normally, there is little continuous administration needed for the \{productName} software.
-Refer to link:#important_points_for_administrators[the following points] for some specific concerns.
+Apart from ensuring that the run-time system is executing normally, there is little continuous administration needed for the {productName} software.
+Refer to <<important_points_for_administrators>> for some specific concerns.
 
 [#important_points_for_administrators]
-* The present implementation of the \{productName} system provides no security or protection for data.
-The objects stored in the \{productName} object store are (typically) owned by the user who ran the application that created them.
+* The present implementation of the {productName} system provides no security or protection for data.
+The objects stored in the {productName} object store are (typically) owned by the user who ran the application that created them.
 The Object Store and Object Manager facilities make no attempt to enforce even the limited form of protection that Unix/Windows provides.
 There is no checking of user or group IDs on access to objects for either reading or writing.
 * Persistent objects created in the Object Store never go away unless the StateManager.destroy method is invoked on the object or some application program explicitly deletes them.
@@ -18,5 +18,5 @@ When `A` is next activated and attempts to access `B`, a run-time error will occ
 * There is presently no support for version control of objects or database reconfiguration in the event of class structure changes.
 This is a complex research area that we have not addressed.
 At present, if you change the definition of a class of persistent objects, you are entirely responsible for ensuring that existing instances of the object in the Object Store are converted to the new representation.
-The \{productName} software can neither detect nor correct references to old object state by new operation versions or vice versa.
+The {productName} software can neither detect nor correct references to old object state by new operation versions or vice versa.
 * Object store management is critically important to the transaction service.
