--- a/src/asciidoc/project/jta/jdbc.adoc
+++ b/src/asciidoc/project/jta/jdbc.adoc
@@ -1,6 +1,6 @@
-=== JDBC and Transactions
+= JDBC and Transactions
 
-==== Using the transactional JDBC driver
+== Using the transactional JDBC driver
 
 // Put this in an appendix? Link directly to it?
 {productName} supports construction of both local and distributed transactional applications which access databases using the JDBC APIs.
@@ -10,52 +10,40 @@ A list of the tested drivers is available from the {parentProduct} website.
 Only use the transactional JDBC support provided in package `com.arjuna.ats.jdbc` when you are using {parentProduct} outside of an application server, such as {appServer}, or another container.
 Otherwise, use the JDBC support provided by your application server or container.
 
-===== Managing transactions
+=== Managing transactions
 
 {productName} needs the ability to associate work performed on a JDBC connection with a specific transaction.
 Therefore, applications need to use a combination of implicit transaction propagation and indirect transaction management.
 For each JDBC connection, {productName} must be able to determine the invoking thread's current transaction context.
 
-===== Restrictions
+=== Restrictions
 
 Nested transactions are not supported by JDBC.
 If you try to use a JDBC connection within a subtransaction, {productName} throws a suitable exception and no work is allowed on that connection.
 However, if you need nested transactions, and are comfortable with straying from the JDBC standard, you can set property `com.arjuna.ats.jta.supportSubtransactions` property to `YES`.
 
-==== Transactional drivers
+== Transactional drivers
 
 The approach {productName} takes for incorporating JDBC connections within transactions is to provide transactional JDBC drivers as conduits for all interactions.
 These drivers intercept all invocations and ensure that they are registered with, and driven by, appropriate transactions.
 The driver `com.arjuna.ats.jdbc.TransactionalDriver` handles all JDBC drivers, implementing the `java.sql.Driver` interface.
 If the database is not transactional, ACID properties cannot be guaranteed.
 
-===== Loading drivers
+=== Loading drivers
 
 .Instantiating and using the driver within an application
 ====
-[source,Java]
+[source,java]
 ----
-TransactionalDriver arjunaJDBC2Driver = new TransactionalDriver();
+include::extras/instantiating_transactionaldriver.java[]
 ----
 ====
 
 .Registering the drivers with the JDBC driver manager using the Java system properties
 ====
-[source,Java]
+[source,java]
 ----
-Properties p = System.getProperties();
-
-switch (dbType) {
-case MYSQL:
-    p.put("jdbc.drivers", "com.mysql.jdbc.Driver");
-    break;
-case PGSQL:
-    p.put("jdbc.drivers", "org.postgresql.Driver");
-    break;
-}
-
-System.setProperties(p);
-
+include::extras/registering_transactionaldriver_using_jdbc_driver_manager.java[]
 ----
 
 The jdbc.drivers property contains a colon-separated list of driver class names, which the JDBC driver manager loads when it is initialized.
@@ -67,32 +55,30 @@ After the driver is loaded, you can use it to make a connection with a database.
 Calling `Class.forName()` automatically registers the driver with the JDBC driver manager.
 It is also possible to explicitly create an instance of the JDBC driver.
 
-[source,Java]
+[source,java]
 ----
-sun.jdbc.odbc.JdbcOdbcDriver drv = new sun.jdbc.odbc.JdbcOdbcDriver();
-
-DriverManager.registerDriver(drv);
+include::extras/class.forName.java[]
 ----
 ====
 
-==== Connections
+== Connections
 
 Because {productName} provides JDBC connectivity via its own JDBC driver, application code can support transactions with relatively small code changes.
 Typically, the application programmer only needs to start and terminate transactions.
 
-===== JDBC
+=== JDBC
 
 The {productName} driver accepts the following properties, all located in class `com.arjuna.ats.jdbc.TransactionalDriver`.
 
-[cols=",",]
+[cols="1,1"]
 |===
 |username |the database username
 |password |the database password
-|createDb |creates the database automatically if set to `true` . Not all JDBC implementations support this.
+|createDb |creates the database automatically if set to `true`. Not all JDBC implementations support this.
 |dynamicClass |specifies a class to instantiate to connect to the database, instead of using JNDI.
 |===
 
-===== XADataSources
+=== XADataSources
 
 JDBC connections are created from appropriate DataSources.
 Connections which participate in distributed transactions are obtained from XADataSources.
@@ -102,7 +88,7 @@ The transaction service uses these XAResources when the transaction terminates i
 
 {productName} JDBC support can obtain XADataSources through the Java Naming and Directory Interface (JNDI) or dynamic class instantiation.
 
-====== Java naming and directory interface (JNDI)
+==== Java naming and directory interface (JNDI)
 
 A JDBC driver can use arbitrary `DataSources` without having to know specific details about their implementations, by using JNDI.
 A specific `DataSource` or `XADataSource` can be created and registered with an appropriate JNDI implementation, and the application, or JDBC driver, can later bind to and use it.
@@ -114,44 +100,24 @@ Details of how to do this can be found in the JDBC tutorial available at the Jav
 
 .Storing a datasource in a JNDI implementation
 ====
-[source,Java]
+[source,java]
 ----
-XADataSource ds = MyXADataSource();
-Hashtable env = new Hashtable();
-String initialCtx = PropertyManager.getProperty("Context.INITIAL_CONTEXT_FACTORY");
-
-env.put(Context.INITIAL_CONTEXT_FACTORY, initialCtx);
-
-initialContext ctx = new InitialContext(env);
-
-ctx.bind("jdbc/foo", ds);
-
+include::extras/storing_datasource_in_jndi.java[]
 ----
 
 The `Context.INITIAL_CONTEXT_FACTORY` property is the JNDI way of specifying the type of JNDI implementation to use.
 
 The application must pass an appropriate connection URL to the JDBC driver:
 
-[source,Java]
+[source,java]
 ----
-Properties dbProps = new Properties();
-
-dbProps.setProperty(TransactionalDriver.userName, "user");
-dbProps.setProperty(TransactionalDriver.password, "password");
-
-// the driver uses its own JNDI context info, remember to set it up:
-jdbcPropertyManager.propertyManager.setProperty("Context.INITIAL_CONTEXT_FACTORY", initialCtx);
-jdbcPropertyManager.propertyManager.setProperty("Context.PROVIDER_URL", myUrl);
-
-TransactionalDriver arjunaJDBCDriver = new TransactionalDriver();
-Connection connection = arjunaJDBCDriver.connect("jdbc:arjuna:jdbc/foo", dbProps);
-
+include::extras/passing_connection_url_to_jdbc.java[]
 ----
 
 The JNDI URL must be pre-pended with `jdbc:arjuna:` in order for the `TransactionalDriver` to recognize that the `DataSource` must participate within transactions and be driven accordingly.
 ====
 
-====== Dynamic class instantiation
+==== Dynamic class instantiation
 
 If a JNDI implementation is not available. you can specify an implementation of the `DynamicClass` interface, which is used to get the `XADataSource` object.
 This is not recommended, but provides a fallback for environments where use of JNDI is not feasible.
@@ -169,21 +135,13 @@ The oracle_8_1_6 dynamic class is deprecated and should not be used.
 ====
 The application code must specify which dynamic class the TransactionalDriver should instantiate when setting up the connection:
 
-[source,Java]
+[source,java]
 ----
-Properties dbProps = new Properties();
-
-dbProps.setProperty(TransactionalDriver.userName, "user");
-dbProps.setProperty(TransactionalDriver.password, "password");
-dbProps.setProperty(TransactionalDriver.dynamicClass, "com.arjuna.ats.internal.jdbc.drivers.PropertyFileDynamicClass");
-
-TransactionalDriver arjunaJDBC2Driver = new TransactionalDriver();
-Connection connection = arjunaJDBC2Driver.connect("jdbc:arjuna:/path/to/property/file", dbProperties);
-
+include::extras/instantiating_dynamic_class.java[]
 ----
 ====
 
-===== Using the connection
+=== Using the connection
 
 Once the connection is established, all operations on the connection are monitored by {productName}. you do not need to use the transactional connection within transactions.
 If a transaction is not present when the connection is used, then operations are performed directly on the database.
@@ -207,30 +165,19 @@ Once created, the driver and any connection can be used in the same way as any o
 
 .Creating and using a connection
 ====
-[source,Java]
+[source,java]
 ----
-Statement stmt = conn.createStatement();
-
-try{
-    stmt.executeUpdate("CREATE TABLE test_table (a INTEGER,b INTEGER)");
-} catch (SQLException e) {
-    // table already exists
-}
-
-stmt.executeUpdate("INSERT INTO test_table (a, b) VALUES (1,2)");
-
-ResultSet res1 = stmt.executeQuery("SELECT * FROM test_table");
-
+include::extras/creating_and_using_a_connection.java[]
 ----
 ====
 
-===== Connection pooling
+=== Connection pooling
 
 For each username and password, {productName} maintains a single instance of each connection for as long as that connection is in use.
 Subsequent requests for the same connection get a reference to the original connection, rather than a new instance.
 You can try to close the connection, but the connection will only actually be closed when all users (including transactions) have either finished with the connection, or issued `close` calls.
 
-===== Reusing connections
+=== Reusing connections
 
 Some JDBC drivers allow the reuse of a connection for multiple different transactions once a given transaction completes.
 Unfortunately this is not a common feature, and other drivers require a new connection to be obtained for each new transaction.
@@ -239,18 +186,18 @@ However, if an existing connection is available and is currently unused, {produc
 To turn on this feature, add option `reuseconnection=true` to the JDBC URL.
 For instance, `jdbc:arjuna:sequelink://host:port;databaseName=foo;reuseconnection=true`
 
-===== Terminating the transaction
+=== Terminating the transaction
 
 When a transaction with an associated JDBC connection terminates, because of the application or because a transaction timeout expires, {productName} uses the JDBC driver to drive the database to either commit or roll back any changes made to it.
 This happens transparently to the application.
 
-===== AutoCommit
+=== AutoCommit
 
 If property `AutoCommit` of the interface `java.sql.Connection` is set to `true` for JDBC, the execution of every SQL statement is a separate top-level transaction, and it is not possible to group multiple statements to be managed within a single OTS transaction.
 Therefore, {productName} disables `AutoCommit` on JDBC connections before they can be used.
 If `AutoCommit` is later set to `true` by the application, {productName} throws the `java.sql.SQLException`.
 
-===== Setting isolation levels
+=== Setting isolation levels
 
 When you use the {productName} JDBC driver, you may need to set the underlying transaction isolation level on the XA connection.
 By default, this is set to `TRANSACTION_SERIALIZABLE`, but another value may be more appropriate for your application.
