--- a/src/asciidoc/project/jta/jta.adoc
+++ b/src/asciidoc/project/jta/jta.adoc
@@ -1,39 +1,77 @@
 = JTA
+:doctype: book
+:sectnums:
+:toc: left
+:icons: font
+:experimental:
+:sourcedir: .
 
 == Administration
 
-include::{docdir}/project/jta/administration_introduction.adoc[]
+:leveloffset: 2
+include::introduction.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/starting_and_stopping_transaction_manager.adoc[]
+:leveloffset: 2
+include::starting_and_stopping_transaction_manager.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/objectstore_management.adoc[]
+:leveloffset: 2
+include::objectstore_management.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/jbossjta_runtime_information.adoc[]
+:leveloffset: 2
+include::jbossjta_runtime_information.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/failure_recovery_administration.adoc[]
+:leveloffset: 2
+include::failure_recovery_administration.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/errors_and_exceptions.adoc[]
+:leveloffset: 2
+include::errors_and_exceptions.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/selecting_the_jta_implementation.adoc[]
+:leveloffset: 2
+include::selecting_the_jta_implementation.adoc[]
+:leveloffset: 0
 
 == Development
 
-include::{docdir}/project/jta/jdbc.adoc[]
+:leveloffset: 2
+include::jdbc.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/examples.adoc[]
+:leveloffset: 2
+include::examples.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/using_jbossta_in_application_servers.adoc[]
+:leveloffset: 2
+include::using_jbossta_in_application_servers.adoc[]
+:leveloffset: 0
 
 == Installation
 
-include::{docdir}/project/jta/preparing_your_system.adoc[]
+:leveloffset: 2
+include::preparing_your_system.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/operating_system_services.adoc[]
+:leveloffset: 2
+include::operating_system_services.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/logging.adoc[]
+:leveloffset: 2
+include::logging.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/additional_jar_requirements.adoc[]
+:leveloffset: 2
+include::additional_jar_requirements.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/setting_properties.adoc[]
+:leveloffset: 2
+include::setting_properties.adoc[]
+:leveloffset: 0
 
-include::{docdir}/project/jta/quick_start_to_jta.adoc[]
+:leveloffset: 1
+include::quick_start_to_jta.adoc[]
+:leveloffset: 0
