--- a/src/asciidoc/project/jta/selecting_the_jta_implementation.adoc
+++ b/src/asciidoc/project/jta/selecting_the_jta_implementation.adoc
@@ -1,9 +1,9 @@
-=== Selecting the JTA implementation
+= Selecting the JTA implementation
 
 Two variants of the JTA implementation are accessible through the same interface.
 These are:
 
-[cols=",",]
+[cols="1,1"]
 |===
 |Purely local JTA |Only non-distributed JTA transactions are executed. This is the only version available with the {productName} distribution.
 |Remote, CORBA-based JTA |Executes distributed JTA transactions. This functionality is provided by the JTS distribution and requires a supported CORBA ORB. Consult the JTS Installation and Administration Guide for more information.
